--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,11 @@
+body {
+  background: linear-gradient(
+    110.5deg,
+    rgba(248, 196, 249, 0.66) 22.8%,
+    rgba(253, 122, 4, 0.15) 64.6%
+  );
+}
+
 .description {
   margin: 0 auto;
 }
